--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Ignore Mac system files
 .DS_store
 
+# Ignore dist folder
+dist/
+!bower_components/**/dist/
+
 # Ignore node_modules folder
 node_modules
 
